# RH_CLI

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_en.md  pyproject.toml
docs/: commands.md  output.md
script/: extract_first_frame.py
src/rh_cli/: __init__.py  account.py  compat.py  config.py  errors.py  http.py  main.py  media.py  output.py  poll.py  state.py
src/rh_cli/app/: __init__.py  client.py  commands.py  nodes.py
src/rh_cli/browser/: client.py  commands.py
src/rh_cli/catalog/: __init__.py  loader.py
src/rh_cli/model/: __init__.py  client.py  commands.py  menus.py  payload.py
src/rh_cli/workflow/: client.py  commands.py
tests/: test_config.py  test_nodes.py  test_payload.py  test_workflow.py
workflows/: Qwen 单图 去背景杂物 v2_api.json
workflows/ai/: Qwen+单图编辑_api.json  SCAIL2+Animation+&+Replacement+动作迁移&角色替换_api.json
workflows/cn/: FaceFix_api.json  QwenEdit_api.json
workflows/pipeline/: qwen-image-edit.md  video-remove-pipeline.md
