[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rh-cli"
version = "0.1.0"
description = "Modern RunningHub command line interface for models and AI applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "RunningHub" },
]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "tomli>=2.0; python_version < '3.11'",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
rh = "rh_cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/rh_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
